# moshi-client-examples

./: .gitignore  README.md
node-no-ui/: README.md  index.ts  package.json  queue.ts  tsconfig.json
node-no-ui/@types/: mic.d.ts
python-no-ui/: README.md  client.py  moshi_cli.py  pyproject.toml  requirements.txt
rust-no-ui/: Cargo.toml  README.md
rust-no-ui/src/: audio_io.rs  main.rs  multistream.rs
rust-ui/: Cargo.toml  README.md
rust-ui/src/: audio_io.rs  main.rs  multistream.rs
web-ui/: Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  index.html  package-lock.json  vite.config.ts
web-ui/src/: audio-processor.ts  env.ts
web-ui/src/components/Input/: Input.tsx
web-ui/src/pages/Conversation/: Conversation.tsx
web-ui/src/pages/Conversation/components/AudioVisualizer/: AudioVisualizer.tsx  ClientVisualizer.tsx  ServerVisualizer.tsx
web-ui/src/pages/Conversation/components/ServerInfo/: ServerInfo.tsx
web-ui/src/pages/Conversation/components/UserAudio/: UserAudio.tsx
web-ui/src/pages/Conversation/hooks/: useModelParams.ts  useServerAudio.ts  useServerInfo.ts  useSocket.ts  useUserAudio.ts
web-ui/src/pages/Queue/: Queue.tsx
web-ui/src/protocol/: encoder.ts
