[tool.poetry]
name = "python-no-ui"
version = "0.1.0"
description = ""
authors = ["bmarzelleau <bmarzelleau@scaleway.com>", "cseguret <cseguret@scaleway.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
aiohttp = "^3.10.10"
numpy = "^2.1.2"
sphn = "^0.1.4"
sounddevice = "^0.5.1"

[tool.poetry.scripts]
moshi-cli = "moshi_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
