[package]
name = "moshi-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.91"
block = "0.1.6"
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-util = "0.3.31"
log = "0.4.22"
native-tls = "0.2.12"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
ratatui = "0.27.0"
rubato = "0.16.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "native-tls"] }
tracing = "0.1.40"
tui-logger = "0.11.2"
url = "2.5.2"
